--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "playground-toolkit",
-  "version": "1.0.4",
+  "name": "@c3th/playground-toolkit",
+  "version": "1.0.7",
   "description": "Playgrount toolkit to support portfolio testing application and website",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
